# AngelClaw

./: .gitignore  README.md  angelctl  pyproject.toml
.github/workflows/: ci.yml
agentless/: README.md
angelnode/: README.md
angelnode/ai_shield/: angelbot.py  angelbot_adapter.py  openclaw_adapter.py
angelnode/config/: category_defaults.json  default_policy.json
angelnode/core/: cloud_sync.py  engine.py  server.py  structured_logger.py
cloud/: README.md
cloud/ai_assistant/: README.md  assistant.py  models.py
cloud/angelclaw/: __init__.py  actions.py  brain.py  context.py  daemon.py  models.py  preferences.py  routes.py  security.py  shield.py
cloud/api/: admin_routes.py  analytics_routes.py  angelclaw_agent_routes.py  apex_routes.py  ascendant_routes.py  asset_routes.py  assistant_routes.py  backup_routes.py  convergence_routes.py  darkweb_routes.py  export_routes.py  ghost_routes.py  guardian_models.py  guardian_routes.py  hunting_routes.py  intel_routes.py  mesh_routes.py  metrics_routes.py  metrics_v2_routes.py  mindlink_routes.py  ml_routes.py  neural_routes.py  nexus_prime_routes.py  notification_routes.py  omniguard_routes.py  orchestrator_routes.py  policy_routes.py  prometheus_routes.py  quantum_routes.py  quarantine_routes.py  remediation_routes.py  replay_routes.py  sentinel_eye_routes.py  server.py  siem_routes.py  singularity_routes.py  soar_routes.py  storm_routes.py  titan_grid_routes.py  transcendence_routes.py  (+2 more)
cloud/auth/: __init__.py  api_key_routes.py  api_keys.py  config.py  custom_roles.py  dependencies.py  models.py  role_routes.py  routes.py  service.py
cloud/db/: models.py  session.py
cloud/guardian/: __init__.py  api_warden.py  audit_agent.py  base_agent.py  behavior_sentinel.py  behavior_warden.py  browser_sentinel.py  browser_warden.py  compliance_warden.py  forensic_agent.py  learning.py  models.py  network_sentinel.py  network_warden.py  orchestrator.py  registry.py  response_agent.py  secrets_sentinel.py  secrets_warden.py  self_audit.py  sentinel_agent.py  timeline_sentinel.py  timeline_warden.py  toolchain_sentinel.py  toolchain_warden.py  warden_agent.py
cloud/integrations/: __init__.py  wazuh_client.py  wazuh_ingest.py
cloud/llm_proxy/: config.py  routes.py
cloud/middleware/: __init__.py  rate_limiter.py  security.py
cloud/plugins/: __init__.py  loader.py  routes.py
cloud/services/: agent_mesh.py  (+92 more)
docs/: CHANGELOG.md  README.md  WINDOWS_PORT_PLAN.md  angelclaw_lexicon.md  angelclaw_vs_clawsec.md  clawsec_integration.md  install_uninstall_by_os.md  installation.md  integrations.md  product_overview.md  release_notes.md  security_model.md
extensions/: README.md
mobile/: README.md  manifest.json  service-worker.js
ops/: README.md  docker-compose.yml
scripts/: test_secret_protection.py
shared/: README.md
tests/: conftest.py  test_agent_registration.py  test_angel_legion.py  test_angelclaw_agent.py  test_api_endpoints.py  test_auth.py  test_auth_full.py  test_coverage_95_agents_services.py  test_coverage_95_api.py  test_coverage_95_daemon_orch.py  test_coverage_auth_webhook.py  test_coverage_boost.py  test_coverage_chat_agents.py  test_coverage_final_push.py  test_coverage_server_actions.py  test_coverage_sync_routes.py  test_coverage_v22.py  test_detection.py  test_health.py  test_incident_lifecycle.py  test_middleware.py  test_orchestrator.py  test_policy_engine.py  test_prompt_injection_v10.py  test_security.py  test_security_advanced.py  test_security_module.py  test_self_audit.py  test_shield.py  test_sub_agents.py  test_v100_seraph_multi_tenancy.py  test_v120_features.py  test_v220_upgrade.py  test_v24_brain.py  test_v24_event_bus.py  test_v24_notifications.py  test_v24_policy_snapshots.py  test_v24_quarantine.py  test_v24_rate_limiter.py  test_v24_wardens.py  (+33 more)
(+65 files in other folders)
