[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angelgrid"  # Package name kept as 'angelgrid' for internal compatibility. Product name is AngelClaw.
version = "3.0.0"
description = "AngelClaw AGI Guardian – Fully Autonomous AI Security Suite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.5,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
cloud = [
    "sqlalchemy>=2.0,<3",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["shared*", "angelnode*", "cloud*", "agentless*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
# S = bandit security checks enabled by default
ignore = [
    "S101",  # allow assert in tests
    "S105",  # hardcoded-password-string — false positives on enum values and token_type fields
    "S106",  # hardcoded-password-func-arg — false positive on token_type="bearer"
    "S104",  # hardcoded-bind-all-interfaces — intentional for configurable server binding
    "S108",  # hardcoded-temp-file — false positives on /tmp references in security scanning
    "S110",  # try-except-pass — used intentionally for best-effort cleanup and fallback paths
    "B008",  # function-call-in-default-argument — required by FastAPI Depends()/Query() pattern
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
